# space-wars

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/engine-agent/: Cargo.toml
crates/engine-agent/src/: main.rs
crates/engine-client/: Cargo.toml  build.rs
crates/engine-client/src/: host.rs  input.rs  main.rs  render.rs  settings.rs
crates/engine-client/ui/: main.slint
crates/engine-common/: Cargo.toml
crates/engine-common/src/: lib.rs  render.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: bounds.rs  color.rs  config.rs  constants.rs  lib.rs  math.rs  physics.rs  rng.rs  transform.rs
crates/engine-os-manager/: Cargo.toml
crates/engine-os-manager/src/: main.rs
docs/design/: reboot-rust-slint.md
reference/: README.TXT  README.md
reference/rec/sounds/: kick.au  kick2.aiff
reference/src-decompiled/: AbstractEntity.java  AbstractMunition.java  AudioSample.java  BGStarField.java  BasicEntity.java  Cannon.java  CausesDamage.java  Common.java  Debris.java  Entity.java  EscapePod.java  ExhaustTrail.java  FinalDlg.java  GameConfig.java  GameCreator.java  HasLife.java  KeyboardInput.java  Laser.java  Model.java  Mount.java  Munition.java  ObeysForces.java  Particle.java  Planet.java  PlayWave.java  Player.java  PlayerPanel.java  Projectile.java  Shell.java  Ship.java  ThreePartScorePanel.java  WrapperEntity.java  summary.txt
reference/src-decompiled/UWBGL_JavaOpenGL/: UWBGL_BasicEntity.java  UWBGL_ButtonRepeater.java  UWBGL_Color.java  UWBGL_Common.java  UWBGL_Dial.java  UWBGL_DisplayScalar.java  UWBGL_Displayer.java  UWBGL_DrawHelper.java  UWBGL_DrawHelperOGL.java  UWBGL_EFillMode.java  UWBGL_ELevelOfDetail.java  UWBGL_EShadeMode.java  UWBGL_SceneNode.java  UWBGL_SceneNodeControl.java  UWBGL_SceneNodeControlListener.java  UWBGL_SceneTree.java  UWBGL_SceneTreeModel.java  UWBGL_TextureManager.java  UWBGL_Xform.java
reference/src-decompiled/UWBGL_JavaOpenGL/BoundingVolumes/: UWBGL_BoundingBox.java  UWBGL_BoundingLine.java  UWBGL_BoundingList.java  UWBGL_BoundingSphere.java  UWBGL_BoundingVolume.java  UWBGL_EVolumeType.java
reference/src-decompiled/UWBGL_JavaOpenGL/Primitives/: UWBGL_Primitive.java  UWBGL_PrimitiveCircle.java  UWBGL_PrimitiveLine.java  UWBGL_PrimitiveList.java  UWBGL_PrimitivePoint.java  UWBGL_PrimitivePolygon.java  UWBGL_PrimitiveRectangle.java  UWBGL_PrimitiveTriangle.java
reference/src-decompiled/UWBGL_JavaOpenGL/Util/: UWBGL_Clock.java  UWBGL_Timer.java  UWBGL_TimerListener.java  UWBGL_Util.java
reference/src-decompiled/UWBGL_JavaOpenGL/math3d/: Mat4.java  Vec3.java
scenarios/null/: Cargo.toml
scenarios/null/src/: lib.rs
scenarios/spacewars/: Cargo.toml
scenarios/spacewars/src/: lib.rs
