[package]
name = "engine-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "engine-client"
path = "src/main.rs"

[dependencies]
engine-common = { workspace = true }
engine-core = { workspace = true }
scenario-null = { workspace = true }
scenario-spacewars = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
slint = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
