[package]
name = "engine-os-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "engine-os-manager"
path = "src/main.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
