[package]
name = "scenario-spacewars"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-common = { workspace = true }
engine-core = { workspace = true }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
